bdr.BDR.scala.error
Compilation error:
BDR:6: error: not found: value getIndication
if (getIndication() == 'R'){
    ^BDR:11: error: not found: value getIndication
if (getIndication() == 'L'){
    ^BDR:16: error: not found: value getIndication
if (getIndication() == 'I'){
    ^BDR:22: error: not found: value getIndication
if (getIndication() == 'A'){
    ^BDR:26: error: not found: value getIndication
if (getIndication() == 'B'){
    ^BDR:31: error: not found: value getIndication
if (getIndication() == 'C'){
    ^BDR:37: error: not found: value getIndication
if (getIndication() == 'Z'){
    ^BDR:41: error: not found: value getIndication
if (getIndication() == 'Y'){
    ^BDR:46: error: not found: value getIndication
if (getIndication() == 'X'){
    ^BDR:52: error: not found: value getIndication
if (getIndication() == ' '){
    ^